--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,24 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bcrypt = "0.15"
+chrono = { version = "0.4.42", features = ["serde"] }
+diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
+diesel_migrations = "2.1.0"
+dotenv = "0.15"
+jsonwebtoken = "9.0"
+serde = { version = "1.0.228", features = ["derive", ] }
+serde_json = "1.0"
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
+tokio = { version = "1.23.0", features = ["full"] }
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono"] }
+r2d2 = "0.8.10"
+validator = { version = "0.20.0", features = ["derive"] }
+actix-web = "4.11.0"
+actix-cors = "0.7.1"
+diesel-async = "0.7.3"
+dotenvy = "0.15.7"
+deadpool-diesel = {version = "0.6.1", features = ["postgres"]}
+env_logger = "0.11.8"
+actix-web-httpauth = "0.8.2"
+
